Re-structuring UserMS

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,12 +17,12 @@ phone.invalid=Phone number must be a 10-digit number.
 
 # === Password ===
 password.notnull=Password is required.
-password.invalid=Password must be 8?15 characters long and include at least one digit, one uppercase letter, one lowercase letter, and one special character (!@#$%^&*).
+password.invalid=Password must be 8-15 characters long and include at least one digit, one uppercase letter, one lowercase letter, and one special character (!@#$%^&*).
 
 # === New Password ===
 newpassword.null=New password should not be provided during login or registration.
 newpassword.notnull=New password is required for password updates.
-newpassword.invalid=New password must be 8?15 characters and include a digit, uppercase, lowercase, and a special character.
+newpassword.invalid=New password must be 8-15 characters and include a digit, uppercase, lowercase, and a special character.
 
 # === Previous Password ===
 previous.password.not.equal=New password cannot be the same as the current password.
@@ -32,5 +32,15 @@ role.null=Role must not be provided during registration.
 role.notnull=Role is required for login and password updates.
 
 # === Address ===
-adress.notnull=Address is required during registration.
-adress.null=Address should not be provided during login or password updates.
+address.notnull=Address is required during registration.
+address.null=Address should not be provided during login or password updates.
+
+# Formal validation messages for user address fields
+
+user.address.street.notblank=Please enter your street address.
+user.address.city.notblank=Please enter your city.
+user.address.state.notblank=Please enter your state or province.
+user.address.zipcode.notblank=Please provide your zip or postal code.
+user.address.country.notblank=Please specify your country.
+
+
